# rational_deduction

./: Cargo.toml  README.md
src/: lib.rs
