[package]
name = "rational_deduction"
version = "0.0.3"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/rational_deduction"
homepage = "https://github.com/qdeduction/rational_deduction"
repository = "https://github.com/qdeduction/rational_deduction"
readme = "README.md"
license = "ISC"
keywords = ["deduction"]
categories = [""]
description = "Rust implementation of the rational deduction algorithm."
exclude = [""]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/rational_deduction" }
is-it-maintained-open-issues = { repository = "qdeduction/rational_deduction" }
maintenance = { status = "actively-developed" }

[dependencies]
exprz = "0.0.8"
bitvec = { version = "0.21.1", default-features = false, features = ["alloc"] }
