[package]
name = "rational_deduction"
version = "0.0.5"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/rational_deduction"
homepage = "https://github.com/qdeduction/rational_deduction"
repository = "https://github.com/qdeduction/rational_deduction"
readme = "README.md"
license = "ISC"
keywords = ["deduction"]
categories = [""]
description = "Rust implementation of the rational deduction algorithm."
exclude = [""]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/rational_deduction" }
is-it-maintained-open-issues = { repository = "qdeduction/rational_deduction" }
maintenance = { status = "actively-developed" }

[features]
# No default features enabled
default = []

# Atom-Expr Pairs
aep = []

# Parallel Tools
parallel = ["rayon", "parking_lot"]

# Enables all stable features
stable = [
]

# Enables all experimental features
experimental = [
    "aep",
    "parallel",
    "serde",
]

# Enables all features
all = [
    "stable",
    "experimental",
]

[dependencies]
exprz = { git = "https://github.com/qdeduction/exprz", features = ["shape"] }
bitvec = { version = "0.21.2", default-features = false, features = ["alloc"] }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0.125", optional = true }
parking_lot = { version = "0.11.1", optional = true }
