[package]
name = "rational_deduction"
version = "0.0.5"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/rational_deduction"
homepage = "https://github.com/qdeduction/rational_deduction"
repository = "https://github.com/qdeduction/rational_deduction"
readme = "README.md"
license = "ISC"
keywords = ["deduction"]
categories = [""]
description = "Rust implementation of the rational deduction algorithm."
exclude = [""]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/rational_deduction" }
is-it-maintained-open-issues = { repository = "qdeduction/rational_deduction" }
maintenance = { status = "actively-developed" }

[features]
# No default features enabled
default = []

# [EXPERIMENTAL] Adds Atom-Expr Pairs
aep = []

# [EXPERIMENTAL] Adds Compositions
composition = []

# [EXPERIMENTAL] Enables Panicking Functions
panic = []

# [EXPERIMENTAL] Enables Parallel Tools
parallel = [
    "exprz/rayon",
    "parking_lot",
    "rayon",
]

# Enables all stable features
stable = [
]

# Enables all experimental features
experimental = [
    "aep",
    "composition",
    "panic",
    "parallel",
    "serde",
]

# Enables all features
all = [
    "stable",
    "experimental",
]

[dependencies]
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
exprz = { git = "https://github.com/qdeduction/exprz", features = ["panic", "shape"] }
parking_lot = { version = "0.11.1", optional = true }
rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }

